# sed-compiler

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  add.sed  div.py  example.soil  labo.sed  labo2.sed  labo3.sed  labo4.sed  labo6.sed  note.md  sudoku.py
sed/: add.sed  basic_operations.sed  c_example.sed  headtail.sed  if.sed  if_example.sed  labo.sed  labo2.sed  labo6.sed  mul.sed  new_add.sed  p.sed  shift_left1_test.sed  shift_right1_test.sed  sub.sed  two.sed
sed-compiler/: .gitignore  Cargo.toml  README.md
sed-compiler-frontend/: Cargo.toml  README.md
sed-compiler-frontend/soil_sample/: example.soil
sed-compiler-frontend/src/: parser.rs
sed-compiler/sed/: add.sed  compare.sed  ends_with_zero_test.sed  is_empty_test.sed  labo3.sed  labo4.sed  labo5.sed  labo6.sed  mul.sed
sed-compiler/soil/: basic_operations.soil
sed-compiler/src/: code_gen.rs  compiler.rs  embedded.rs
sed-compiler/tests/: command_test.rs  gen_test2.rs
soil/: example.soil
soil_sample/: basic.soil  example.soil
soilc/: Cargo.toml  README.md
soilc/src/: main.rs
src/: ast.rs  code_gen.rs  compiler.rs  embedded.rs  lib.rs  parser.rs  val_resolver.rs
tests/: command_test.rs  gen_test.rs  gen_test00.rs  gen_test2.rs  test00.rs
