[package]
name = "sed-compiler"
version = "0.1.0"
edition = "2024"
license = "MIT"

authors = ["Muranaka Tomonari <tom.ipynb@gmail.com>"]
description = "sed compiler CLI"
repository = "https://github.com/Tom-game-project/sed-compiler"

[dependencies]
sed-compiler-frontend = { path="../sed-compiler-frontend" }
ariadne = "0.5"

